--- a/configs/ga_vo.yaml
+++ b/configs/ga_vo.yaml
@@ -1,5 +1,5 @@
 
-load_file_name: 'results/ga_e_'   # Use None to run simulations
+load_file_name: 'results/ga_m_'   # Use None to run simulations
 simulation_save_file: None # Use None for not saving
 multi_file: 32 # Use 0 to run simulations
 
@@ -59,8 +59,8 @@ max_fitness_kill: 100
 
 #=================== Road Specs ==================================
 road_visuals: False
-road_max_angle: 0
-road_max_deviation: 0
-road_spacing: 200
+road_max_angle: 7
+road_max_deviation: 150
+road_spacing: 400
 road_points_per_segment: 50
-road_width: 200
+road_width: 150
