--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -1,5 +1,5 @@
 
-load_file_name: 'results/ga_h_17'   # Use None to run simulations
+load_file_name: None  # Use None to run simulations
 simulation_save_file: None # Use None for not saving
 multi_file: 0 # Use 0 to run simulations
 
